# uaspire-ros

./: .gitignore  uaspire.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
src/uaspire_controls/: CMakeLists.txt  main.cc  package.xml
src/uaspire_ground/: CMakeLists.txt  build.js  index.js  package-lock.json  package.json  package.xml
src/uaspire_ground/cmake/: FindNode.cmake  FindNpm.cmake
src/uaspire_msgs/: CMakeLists.txt  package.xml
src/uaspire_msgs/msg/: Sensors.msg
