<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uaspire_controls</name>
  <version>0.0.1</version>
  <description>UASPIRE Controls</description>
  <maintainer email="alex@amikhalev.com">Alex Mikhalev</maintainer>
  <license>Apache License 2.0</license>
  <author>Alex Mikhalev</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>uaspire_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>uaspire_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>